# haniel

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  KNOWN-BUGS.md  LICENSE  README.md
.github/workflows/: ci.yml
crates/haniel/: Cargo.toml
crates/haniel/src/: lib.rs  pipeline.rs
crates/haniel_awp/: Cargo.toml
crates/haniel_awp/src/: cache.rs  lib.rs  registry.rs  response.rs  router.rs  youtube.rs
crates/haniel_canvas/: Cargo.toml
crates/haniel_canvas/src/: codec.rs  gpu.rs  lib.rs  paint.rs  pixel.rs  raster.rs  surface.rs  text_render.rs
crates/haniel_echo/: Cargo.toml
crates/haniel_echo/src/: capability.rs  dom.rs  lib.rs  runner.rs  sandbox.rs
crates/haniel_herald/: Cargo.toml
crates/haniel_herald/src/: arpi.rs  fetch.rs  header.rs  lib.rs  protocol.rs  threat.rs
crates/haniel_lumen/: Cargo.toml
crates/haniel_lumen/src/: abr.rs  audio.rs  codec.rs  demux.rs  drm.rs  lib.rs  session.rs  stream.rs  video.rs
crates/haniel_onyx/: Cargo.toml
crates/haniel_onyx/src/: classify.rs  gpu_bridge.rs  hints.rs  infer.rs  lib.rs  threat.rs
crates/haniel_prism/: Cargo.toml
crates/haniel_prism/src/: axbw.rs  cone.rs  flex.rs  html.rs  layout.rs  lib.rs  srb.rs  text.rs
crates/haniel_sentinel/: Cargo.toml
crates/haniel_sentinel/src/: audit.rs  caps.rs  ipc.rs  lib.rs  pd.rs  policy.rs  recovery.rs  renderer.rs
crates/haniel_vault/: Cargo.toml
crates/haniel_vault/src/: cache.rs  font.rs  lib.rs  lru.rs  memory.rs
docs/: AXON-MIGRATION-PLAN.md  HANIEL-SPEC-v1.0.md
stubs/axon_gpu_stub/: Cargo.toml
stubs/axon_gpu_stub/src/: lib.rs
