# Copyright (c) 2026 Edison Lepiten / AIEONYX
# SPDX-License-Identifier: Apache-2.0
# HANIEL — AIEONYX Sovereign Browser and Rendering Engine
# github.com/aieonyx/haniel

[workspace]
resolver = "2"
members = [
    "crates/haniel_herald",
    "crates/haniel_prism",
    "crates/haniel_canvas",
    "crates/haniel_echo",
    "crates/haniel_onyx",
    "crates/haniel_vault",
    "crates/haniel_sentinel",
    "crates/haniel_lumen",
    "crates/haniel",
]

[workspace.package]
version     = "0.1.0"
edition     = "2021"
authors     = ["Edison Lepiten <edison@aieonyx.com>"]
license     = "Apache-2.0"
repository  = "https://github.com/aieonyx/haniel"

[workspace.dependencies]
# AXON sovereign libraries — confirmed crate names from axon workspace
axon_net        = { path = "../axon/crates/axon_net" }
axon_crypto     = { path = "../axon/crates/axon_crypto" }
axon_gpu        = { path = "../axon/crates/axon_gpu" }
axon_media      = { path = "../axon/crates/axon_media" }
axon_layout     = { path = "../axon/crates/axon_layout" }
axon_wasm       = { path = "../axon/crates/axon_wasm" }
axon_font       = { path = "../axon/crates/axon_font" }
axon_ai_runtime = { path = "../axon/crates/axon_ai_runtime" }
axon_runtime    = { path = "../axon/crates/axon_runtime" }

# Minimal Rust coordination layer
log         = "0.4"
env_logger  = "0.11"
