# Copyright (c) 2026 Edison Lepiten / AIEONYX
# SPDX-License-Identifier: Apache-2.0
# HANIEL CANVAS — Sovereign Rasterizer and GPU Renderer

[package]
name              = "haniel_canvas"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
axon_gpu.workspace = true
axon_font.workspace = true
axon_layout.workspace = true
wgpu = { version = "22", optional = true }
log.workspace = true

[features]
default = []
gpu = ["wgpu"]

[dev-dependencies]
env_logger.workspace = true
