# Copyright (c) 2026 Edison Lepiten / AIEONYX
# SPDX-License-Identifier: Apache-2.0
# HANIEL HERALD — Network, Protocol, STS Threat Gate, ARPi

[package]
name        = "haniel_herald"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
axon_net.workspace = true
axon_crypto.workspace = true
log.workspace = true

[dev-dependencies]
env_logger.workspace = true
