# Copyright (c) 2026 Edison Lepiten / AIEONYX
# SPDX-License-Identifier: Apache-2.0
# HANIEL PRISM — Sovereign Layout Engine (Rod/Cone dual pass)

[package]
name        = "haniel_prism"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
axon_layout.workspace = true
axon_font.workspace = true
log.workspace = true

[dev-dependencies]
env_logger.workspace = true
