# Copyright (c) 2026 Edison Lepiten / AIEONYX
# SPDX-License-Identifier: Apache-2.0
# HANIEL VAULT — Sovereign Memory Manager and Cache

[package]
name              = "haniel_vault"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
axon_crypto.workspace = true
axon_runtime.workspace = true
axon_font.workspace   = true
log.workspace = true

[dev-dependencies]
env_logger.workspace = true
